holy larp wtf also sicily is duped in the loc

--- a/localisation/english/MM_countries2_l_english.yml
+++ b/localisation/english/MM_countries2_l_english.yml
@@ -7743,9 +7743,9 @@
  ALS_stratocratic:0 "Alash Military Junta"
  ALS_stratocratic_DEF:0 "Alash Military Junta"
  ALS_stratocratic_ADJ:0 "Alash"
- ALS_authoritarian_monarchism:0 "General Governorate of the Steppes"
- ALS_authoritarian_monarchism_DEF:0 "General Governorate of the Steppes"
- ALS_authoritarian_monarchism_ADJ:0 "Steppe"
+ ALS_authoritarian_monarchism:0 "Botai"
+ ALS_authoritarian_monarchism_DEF:0 "The Botai Culture"
+ ALS_authoritarian_monarchism_ADJ:0 "Botai"
  ALS_republican_fascism:0 "Alash State"
  ALS_republican_fascism_DEF:0 "Alash State"
  ALS_republican_fascism_ADJ:0 "Alash"
@@ -9551,9 +9551,9 @@
  CSK_neutrality:0 "State of Cossackia"
  CSK_neutrality_DEF:0 "The State of Cossackia"
  CSK_neutrality_ADJ:0 "Cossack"
- CSK_authoritarian_monarchism:0 "Larak"
- CSK_authoritarian_monarchism_DEF:0 "The City-State of Larak"
- CSK_authoritarian_monarchism_ADJ:0 "Larak"
+ CSK_authoritarian_monarchism:0 "Yamnaya"
+ CSK_authoritarian_monarchism_DEF:0 "The Yamnaya Civilization"
+ CSK_authoritarian_monarchism_ADJ:0 "Yamnaya"
  CSK_stratocratic:0 "Almighty Cossack Host"
  CSK_stratocratic_DEF:0 "The Almighty Cossack Host"
  CSK_stratocratic_ADJ:0 "Cossack"
