--- a/localisation/english/MM_countries_l_english.yml
+++ b/localisation/english/MM_countries_l_english.yml
@@ -4909,16 +4909,16 @@
  ATT_neutrality:0 "Attica"
  ATT_neutrality_DEF:0 "Attica"
  ATT_neutrality_ADJ:0 "Attican"
- ATT_democratic_monarchism:0 "Eyalet of Attica"
- ATT_democratic_monarchism_DEF:0 "The Eyalet of Attica"
- ATT_democratic_monarchism_ADJ:0 "Attican"
+ ATT_authoritarian_monarchism:0 "Thebais"
+ ATT_authoritarian_monarchism_DEF:0 "The Thebais Civilization"
+ ATT_authoritarian_monarchism_ADJ:0 "Thebais"
 
  CGR_communism:0 "Commune of Central Greece"
  CGR_communism_DEF:0 "the Commune of Central Greece"
  CGR_communism_ADJ:0 "Central Greek"
- CGR_democratic_monarchism:0 "Eyalet of Yanina"
- CGR_democratic_monarchism_DEF:0 "The Eyalet of Yanina"
- CGR_democratic_monarchism_ADJ:0 "Greek"
+ CGR_authoritarian_monarchism:0 "Manika"
+ CGR_authoritarian_monarchism_DEF:0 "The Manika Civilization"
+ CGR_authoritarian_monarchism_ADJ:0 "Manika"
  CGR_centrist_republic:0 "Hellenic Republic"
  CGR_centrist_republic_DEF:0 "The Hellenic Republic"
  CGR_centrist_republic_ADJ:0 "Greek"
@@ -4951,9 +4951,9 @@
  CMC_democratic:0 "Republic of Central Macedonia"
  CMC_democratic_DEF:0 "Republic of Central Macedonia"
  CMC_democratic_ADJ:0 "Central Macedonian"
- CMC_conservative_monarchism:0 "Khedivate of Arbanon"
- CMC_conservative_monarchism_DEF:0 "The Khedivate of Arbanon"
- CMC_conservative_monarchism_ADJ:0 "Albanian"
+ CMC_authoritarian_monarchism:0 "Tiryn"
+ CMC_authoritarian_monarchism_DEF:0 "The Tiryn Civilization"
+ CMC_authoritarian_monarchism_ADJ:0 "Tiryni"
  CMC_neutrality:0 "Central Macedonia"
  CMC_neutrality_DEF:0 "Central Macedonia"
  CMC_neutrality_ADJ:0 "Central Macedonian"
@@ -5002,17 +5002,17 @@
  PPN_socialist_monarchy:0 "United Kingdom of Denmark and Greece"
  PPN_socialist_monarchy_DEF:0 "The United Kingdom of Denmark and Greece"
  PPN_socialist_monarchy_ADJ:0 "Dano-Greek"
- PPN_democratic_monarchism:0 "Eyalet of the Morea"
- PPN_democratic_monarchism_DEF:0 "The Eyalet of the Morea"
- PPN_democratic_monarchism_ADJ:0 "Pelopponesian"
+ PPN_authoritarian_monarchism:0 "Eyalet of the Morea"
+ PPN_authoritarian_monarchism_DEF:0 "The Eyalet of the Morea"
+ PPN_authoritarian_monarchism_ADJ:0 "Pelopponesian"
  PPN_democratic:0 "Pelopponesian Republic"
  PPN_democratic_DEF:0 "The Pelopponesian Republic"
  PPN_democratic_ADJ:0 "Pelopponesian"
  PPN_neutrality:0 "Pelopponese"
  PPN_neutrality_DEF:0 "Pelopponese"
- PPN_authoritarian_monarchism:0 "Spartan Empire"
- PPN_authoritarian_monarchism_DEF:0 "Spartan Empire"
- PPN_authoritarian_monarchism_ADJ:0 "Spartan"
+ PPN_authoritarian_monarchism:0 "Eutresis"
+ PPN_authoritarian_monarchism_DEF:0 "The Eutresis Civilization"
+ PPN_authoritarian_monarchism_ADJ:0 "Eutresine"
  PPN_stratocratic:0 "Spartan State"
  PPN_stratocratic_DEF:0 "The Spartan State"
  PPN_stratocratic_ADJ:0 "Spartan"
@@ -5032,9 +5032,9 @@
  PPN_theocratic_ADJ:0 "Aresian"
  PPN_ADJ:0 "Pelopponesian"
 
- SGN_democratic:0 "South Aegean Republic"
- SGN_democratic_DEF:0 "the South Aegean Republic"
- SGN_democratic_ADJ:0 "South Aegean"
+ SGN_authoritarian_monarchism:0 ""
+ SGN_authoritarian_monarchism_DEF:0 "The Cycladic Culture"
+ SGN_authoritarian_monarchism_ADJ:0 "Cycladean"
  SGN_communism:0 "South Aegean People's Republic"
  SGN_communism_DEF:0 "the South Aegean People's Republic"
  SGN_communism_ADJ:0 "South Aegean"
