--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -210,8 +210,8 @@
  ALB_centrist_monarchism_DEF:0 "The Sanjak of Albania"
  ALB_neutrality:0 "Albanian State"
  ALB_neutrality_DEF:0 "The Albanian State"
- ALB_authoritarian_monarchism:0 "Albanian Kingdom"
- ALB_authoritarian_monarchism_DEF:0 "The Albanian Kingdom"
+ ALB_authoritarian_monarchism:0 "Butmir"
+ ALB_authoritarian_monarchism_DEF:0 "The Butmir Culture"
  ALB_stratocratic:0 "Albanian Military Junta"
  ALB_stratocratic_DEF:0 "The Albanian Military Junta"
  ALB_stratocratic_monarchism:0 "Albanian Regency"
@@ -3160,8 +3160,8 @@
  GRE_stratocratic_DEF:0 "The Greek Military Junta"
  GRE_stratocratic_monarchism:0 "Greek Regency"
  GRE_stratocratic_monarchism_DEF:0 "The Greek Regency"
- GRE_authoritarian_monarchism:0 "Kingdom of the Hellenes"
- GRE_authoritarian_monarchism_DEF:0 "The Kingdom of the Hellenes"
+ GRE_authoritarian_monarchism:0 ""
+ GRE_authoritarian_monarchism_DEF:0 "The Neolithic Greeks"
  GRE_monarchism:0 "Greek Empire"
  GRE_monarchism_DEF:0 "The Greek Empire"
  GRE_theocratic:0 "Greek Patriarchate"
@@ -3279,8 +3279,8 @@
  BUL_stratocratic_DEF:0 "The Bulgarian Military Junta"
  BUL_stratocratic_monarchism:0 "Bulgarian Kingdom"
  BUL_stratocratic_monarchism_DEF:0 "The Bulgarian Kingdom"
- BUL_authoritarian_monarchism:0 "Tsardom of Bulgaria"
- BUL_authoritarian_monarchism_DEF:0 "The Tsardom of Bulgaria"
+ BUL_authoritarian_monarchism:0 "Yunat"
+ BUL_authoritarian_monarchism_DEF:0 "The Yunat Culture"
  BUL_monarchism:0 "Kingdom of Bulgaria"
  BUL_monarchism_DEF:0 "The Kingdom of Bulgaria"
  BUL_theocratic:0 "Exarchate of Bulgaria"
@@ -4216,9 +4216,9 @@
  TAN_conservative_monarchism:0 "Tuvan Autonomous Krai"
  TAN_conservative_monarchism_DEF:0 "The Tuvan Autonomous Krai"
  TAN_conservative_monarchism_ADJ:0 "Tuvan"
- TAN_authoritarian_monarchism:0 "Tuvan Protectorate"
- TAN_authoritarian_monarchism_DEF:0 "The Tuvan Protectorate"
- TAN_authoritarian_monarchism_ADJ:0 "Tuvan"
+ TAN_authoritarian_monarchism:0 "Afanasevo"
+ TAN_authoritarian_monarchism_DEF:0 "The Afanasevo Culture"
+ TAN_authoritarian_monarchism_ADJ:0 "Afanasevo"
  TAN_stratocratic:0 "People's Revolutionary Council"
  TAN_stratocratic_DEF:0 "The People's Revolutionary Council"
  TAN_left_anarchism:0 "Siberian Free Territory"
@@ -7121,8 +7121,8 @@
  MOL_liberal_republic_DEF:0 "The Moldavian Democratic Republic"
  MOL_conservative_monarchism:0 "Kingdom of Bessarabia"
  MOL_conservative_monarchism_DEF:0 "The Kingdom of Bessarabia"
- MOL_authoritarian_monarchism:0 "Principality of Moldova"
- MOL_authoritarian_monarchism_DEF:0 "The Principality of Moldova"
+ MOL_authoritarian_monarchism:0 ""
+ MOL_authoritarian_monarchism_DEF:0 "The Proto-Dacians"
  MOL_monarchism:0 "Governorate of Besserabia"
  MOL_monarchism_DEF:0 "The Governorate of Besserabia"
  MOL_ADJ:0 "Moldovan"
@@ -7136,9 +7136,9 @@
  MLV_anocratic_monarchism_ADJ:0 "Romanian"
  MLV_neutrality:0 "Moldavia"
  MLV_neutrality_DEF:0 "The Moldavia"
- MLV_authoritarian_monarchism:0 "Grand Duchy of Moldavia"
- MLV_authoritarian_monarchism_DEF:0 "The Grand Duchy of Moldavia"
- MLV_authoritarian_monarchism_ADJ:0 "Moldavian"
+ MLV_authoritarian_monarchism:0 "Budzhak"
+ MLV_authoritarian_monarchism_DEF:0 "The Budzhak Culture"
+ MLV_authoritarian_monarchism_ADJ:0 "Budzhak"
  MLV_monarchism:0 "Principality of Moldavia"
  MLV_monarchism_DEF:0 "The Principality of Moldavia"
  MLV_monarchism_ADJ:0 "Moldavian"
@@ -7725,9 +7725,9 @@
  VNC_anocratic_monarchism_DEF:0 "The Venetian Kingdom"
  VNC_neutrality:0 "State of Venice"
  VNC_neutrality_DEF:0 "The State of Venice"
- VNC_authoritarian_monarchism:0 "Kingdom of Lombardy-Venetia"
- VNC_authoritarian_monarchism_DEF:0 "The Kingdom of Lombardy-Venetia"
- VNC_authoritarian_monarchism_ADJ:0 "Lombardy-Venetian"
+ VNC_authoritarian_monarchism:0 "Remedello"
+ VNC_authoritarian_monarchism_DEF:0 "The Remedello Culture"
+ VNC_authoritarian_monarchism_ADJ:0 "Remedelli"
  VNC_stratocratic_monarchism:0 "Federated Kingdom of Lombardy and Venetia"
  VNC_stratocratic_monarchism_DEF:0 "The Federated Kingdom of Lombardy and Venetia"
  VNC_monarchism:0 "Kingdom of Venetia"
@@ -7836,9 +7836,9 @@
  SRD_monarchism_DEF:0 "The Kingdom of Sardinia"
  SRD_anocratic_monarchism:0 "Kingdom of the Two Sardinias"
  SRD_anocratic_monarchism_DEF:0 "The Kingdom of the Two Sardinias"
- SRD_authoritarian_monarchism:0 "Kingdom of Savoy-Sardinia"
- SRD_authoritarian_monarchism_DEF:0 "The Kingdom of Savoy-Sardinia"
- SRD_authoritarian_monarchism_ADJ:0 "Savoyard-Sardinian"
+ SRD_authoritarian_monarchism:0 "Filigosa"
+ SRD_authoritarian_monarchism_DEF:0 "The Filigosa Culture"
+ SRD_authoritarian_monarchism_ADJ:0 "Filigosa"
  SRD_centrist_monarchism:0 "Kingdom of Piedmont-Sardinia"
  SRD_centrist_monarchism_DEF:0 "The Kingdom of Piedmont-Sardinia"
  SRD_centrist_monarchism_ADJ:0 "Piedmontese-Sardinian"
@@ -7876,8 +7876,8 @@
  TUS_socailist_monarchy_DEF:0 "Tuscany"
  TUS_monarchism:0 "Grand Duchy of Tuscany"
  TUS_monarchism_DEF:0 "The Grand Duchy of Tuscany"
- TUS_authoritarian_monarchism:0 "Grand Duchy of Italy"
- TUS_authoritarian_monarchism_DEF:0 "The Grand Duchy of Italy"
+ TUS_authoritarian_monarchism:0 "Rinaldone"
+ TUS_authoritarian_monarchism_DEF:0 "The Rinaldone Culture"
  TUS_conservative_monarchism:0 "Kingdom of Etruria"
  TUS_conservative_monarchism_DEF:0 "The Kingdom of Etruria"
  TUS_centrist_republic:0 "Grand Tuscan Republic"
@@ -8924,9 +8924,9 @@
  NAP_conservative_monarchism_DEF:0 "The Italian Empire"
  NAP_neutrality:0 "State of Naples"
  NAP_neutrality_DEF:0 "The State of Naples"
- NAP_authoritarian_monarchism:0 "Kingdom of the Two Sicilies"
- NAP_authoritarian_monarchism_DEF:0 "The Kingdom of the Two Sicilies"
- NAP_authoritarian_monarchism_ADJ:0 "Two Sicilian"
+ NAP_authoritarian_monarchism:0 "Gaudo"
+ NAP_authoritarian_monarchism_DEF:0 "The Gaudo Culture"
+ NAP_authoritarian_monarchism_ADJ:0 "Gaudi"
  NAP_stratocratic_monarchism:0 "Kingdom of Naples"
  NAP_stratocratic_monarchism_DEF:0 "The Kingdom of Naples"
  NAP_monarchism:0 "Kingdom of Naples"
@@ -8939,30 +8939,8 @@
  NAP_right_anarchism_DEF:0 "The Union of Neapolitan Clans"
  NAP_ADJ:0 "Neapolitan"
  
- SIC_fascism:0 "Empire of Sicily"
- SIC_fascism_DEF:0 "The Empire of Sicily"
- SIC_democratic:0 "Republic of Sicily"
- SIC_democratic_DEF:0 "The Republic of Sicily"
- SIC_centrist_republic:0 "Autonomous Region of Sicily"
- SIC_centrist_republic_DEF:0 "The Autonomous Region of Sicily"
- SIC_neutrality:0 "Kingdom of Sicily"
- SIC_neutrality_DEF:0 "The Kingdom of Sicily"
- SIC_communism:0 "Sicilian Commune"
- SIC_communism_DEF:0 "The Sicilian Commune"
- SIC_monarchism:0 "Kingdom of Sicily"
- SIC_monarchism_DEF:0 "The Kingdom of Sicily"
- SIC_right_anarchism:0 "United Syndicates of Sicily"
- SIC_right_anarchism_DEF:0 "The United Syndicates of Sicily"
- SIC_stratocratic:0 "Allied Military Government of Occupied Territories"
- SIC_stratocratic_DEF:0 "The Allied Military Government of Occupied Territories"
- SIC_stratocratic_monarchism:0 "Expedition of the Thousand"
- SIC_stratocratic_monarchism_DEF:0 "The Expedition of the Thousand"
- SIC_republican_fascism:0 "Sicilian Social Republic"
- SIC_republican_fascism_DEF:0 "The Sicilian Social Republic"
- SIC_ADJ:0 "Sicilian"
- 
- SIC_fascism:0 "Empire of Sicily"
- SIC_fascism_DEF:0 "The Empire of Sicily"
+ SIC_authoritarian_monarchism:0 "Serraferlicchio"
+ SIC_authoritarian_monarchism_DEF:0 "The Serraferlicchio Culture"
  SIC_democratic:0 "Republic of Sicily"
  SIC_democratic_DEF:0 "The Republic of Sicily"
  SIC_neutrality:0 "Kingdom of Sicily"
@@ -9002,9 +8980,6 @@
  SIC_national_socialism:0 "Reichskommissariat Sizilien"
  SIC_national_socialism_DEF:0 "das Reichskommissariat Sizilien"
  SIC_national_socialism_ADJ:0 "Sizilianisch"
- SIC_authoritarian_monarchism:0 "Emirate of Siqiliya"
- SIC_authoritarian_monarchism_DEF:0 "The Emirate of Siqiliya"
- SIC_authoritarian_monarchism_ADJ:0 "Siqiliyan"
  SIC_stratocratic:0 "Allied Military Government of Occupied Territories"
  SIC_stratocratic_DEF:0 "The Allied Military Government of Occupied Territories"
  SIC_stratocratic_monarchism:0 "Expedition of the Thousand"
@@ -9303,8 +9278,8 @@
  TRA_conservative_monarchism_DEF:0 "The State of Transylvania"
  TRA_neutrality:0 "State of Siebenbürgen"
  TRA_neutrality_DEF:0 "The State of Siebenbürgen"
- TRA_authoritarian_monarchism:0 "Duchy of Transylvania"
- TRA_authoritarian_monarchism_DEF:0 "The Duchy of Transylvania"
+ TRA_authoritarian_monarchism:0 "Cotofeni"
+ TRA_authoritarian_monarchism_DEF:0 "The Cotofeni Culture"
  TRA_monarchism:0 "Principality of Transylvania"
  TRA_monarchism_DEF:0 "The Principality of Transylvania"
  TRA_fascism:0 "Empire of Dacia"
@@ -9622,9 +9597,9 @@
  SBR_national_socialism:0 "Reichskommissariat Sibirien"
  SBR_national_socialism_DEF:0 "das Reichskommissariat Sibirien"
  SBR_national_socialism_ADJ:0 "Siberian"
- SBR_authoritarian_monarchism:0 "Realm of Siberia"
- SBR_authoritarian_monarchism_DEF:0 "The Realm of Siberia"
- SBR_authoritarian_monarchism_ADJ:0 "Siberian"
+ SBR_authoritarian_monarchism:0 "Bolshemis"
+ SBR_authoritarian_monarchism_DEF:0 "The Bolshemis Culture"
+ SBR_authoritarian_monarchism_ADJ:0 "Bolshemis"
  SBR_stratocratic:0 "Provisional Siberian Government"
  SBR_stratocratic_DEF:0 "The Provisional Siberian Government"
  SBR_stratocratic_ADJ:0 "Siberian"
@@ -9986,9 +9961,9 @@
  MSC_neutrality:0 "Union State of Russia and Belarus"
  MSC_neutrality_DEF:0 "The Union State of Russia and Belarus"
  MSC_neutrality_ADJ:0 "Russo-Belarusian"
- MSC_authoritarian_monarchism:0 "Empire of Muscovy"
- MSC_authoritarian_monarchism_DEF:0 "The Empire of Muscovy"
- MSC_authoritarian_monarchism_ADJ:0 "Muscovian"
+ MSC_authoritarian_monarchism:0 "Bugor"
+ MSC_authoritarian_monarchism_DEF:0 "The Bugor Culture"
+ MSC_authoritarian_monarchism_ADJ:0 "Bugori"
  MSC_monarchism:0 "Grand Principality of Moscow"
  MSC_monarchism_DEF:0 "The Grand Principality of Moscow"
  MSC_monarchism_ADJ:0 "Muscovian"
@@ -10298,8 +10273,8 @@
  CRM_communism:0 "People's Republic of Crimea"
  CRM_communism_DEF:0 "The People's Republic of Crimea"
  CRM_communism_ADJ:0 "Crimean"
- CRM_monarchism:0 "Crimean Khanate"
- CRM_monarchism_DEF:0 "The Crimean Khanate"
+ CRM_authoritarian_monarchism:0 "Novotitorovka"
+ CRM_authoritarian_monarchism_DEF:0 "The Novotitorovka Culture"
  CRM_monarchism_ADJ:0 "Crimean"
  CRM_centrist_republic:0 "Republic of Crimea"
  CRM_centrist_republic_DEF:0 "The Republic of Crimea"
@@ -12179,8 +12154,8 @@
  CYP_neutrality_DEF:0 "The Colony of French"
  CYP_centrist_republic:0 "State of Cyprus"
  CYP_centrist_republic_DEF:0 "The State of Cyprus"
- CYP_authoritarian_monarchism:0 "Colony of Cyprus"
- CYP_authoritarian_monarchism_DEF:0 "The Colony of Cyprus"
+ CYP_authoritarian_monarchism:0 "Erimi"
+ CYP_authoritarian_monarchism_DEF:0 "The Erimi Civilization"
  CYP_monarchism:0 "Kingdom of Cyprus"
  CYP_monarchism_DEF:0 "The Kingdom of Cyprus"
  CYP_stratocratic:0 "National Organisation of Cypriot Fighters"
@@ -13875,8 +13850,8 @@
  WLC_monarchism:0 "Principality of Wallachia"
  WLC_monarchism_DEF:0 "The Principality of Wallachia"
  WLC_monarchism_ADJ:0 "Wallachian"
- WLC_authoritarian_monarchism:0 "Kingdom of Wallachia"
- WLC_authoritarian_monarchism_DEF:0 "The Kingdom of Wallachia"
+ WLC_authoritarian_monarchism:0 "Cernavoda"
+ WLC_authoritarian_monarchism_DEF:0 "The Cernavoda Culture"
  WLC_anocratic_monarchism:0 "United Principalities of Moldavia and Wallachia"
  WLC_anocratic_monarchism_DEF:0 "The United Principalities of Moldavia and Wallachia"
  WLC_anocratic_monarchism_ADJ:0 "Wallachian"
@@ -14813,9 +14788,9 @@
  DOB_neutrality:0 "Dobrogea"
  DOB_neutrality_DEF:0 "The Dobrogea"
  DOB_neutrality_ADJ:0 "Dobrogean"
- DOB_monarchism:0 "Despotate of Dobruja"
- DOB_monarchism_DEF:0 "The Despotate of Dobruja"
- DOB_monarchism_ADJ:0 "Dobrogean"
+ DOB_authoritarian_monarchism:0 "Ezero"
+ DOB_authoritarian_monarchism_DEF:0 "The Ezero Culture"
+ DOB_authoritarian_monarchism_ADJ:0 "Ezeri"
  DOB_democratic_monarchism:0 "Danubian Cossack Sich"
  DOB_democratic_monarchism_DEF:0 "The Danubian Cossack Sich"
  DOB_democratic_monarchism_ADJ:0 "Danubian Cossack"
@@ -15415,9 +15390,9 @@
  BOH_national_socialism_DEF:0 "Das Reichsprotektorat Böhmen"
  BOH_national_socialism_ADJ:0 "Bohemian"
  
- HZB_democratic:0 "Republic of Herzeg-Bosnia"
- HZB_democratic_DEF:0 "The Republic of Herzeg-Bosnia"
- HZB_democratic_ADJ:0 "Herzeg-Bosnian"
+ HZB_authoritarian_monarchism:0 "Laterza"
+ HZB_authoritarian_monarchism_DEF:0 "The Laterza Culture"
+ HZB_authoritarian_monarchism_ADJ:0 "Laterza"
  HZB_communism:0 "People's Republic of Herzegovina"
  HZB_communism_DEF:0 "The People's Republic of Herzegovina"
  HZB_communism_ADJ:0 "Herzeg-Bosnian"
@@ -15441,8 +15416,8 @@
  GAU_fascism_DEF:0 "The Gagauz Empire"
  GAU_neutrality:0 "Gagauzia"
  GAU_neutrality_DEF:0 "Gagauzia"
- GAU_monarchism:0 "Gagauz Kingdom"
- GAU_monarchism_DEF:0 "The Gagauz Kingdom"
+ GAU_authoritarian_monarchism:0 "Usatovo"
+ GAU_authoritarian_monarchism_DEF:0 "The Usatovo Culture"
  GAU_socialism_ideology:0 "Autonomous Territorial Unit of Gagauzia"
  GAU_socialism_ideology_DEF:0 "The Autonomous Territorial Unit of Gagauzia"
  GAU_national_conservative_republic:0 "Autonomous Territorial Unit of Gagauzia"
@@ -15867,9 +15842,9 @@
  STY_neutrality:0 "Duchy of Styria"
  STY_neutrality_DEF:0 "The Duchy of Styria"
  STY_neutrality_ADJ:0 "Styrian"
- STY_monarchism:0 "Duchy of Styria"
- STY_monarchism_DEF:0 "The Duchy of Styria"
- STY_monarchism_ADJ:0 "Styrian"
+ STY_authoritarian_monarchism:0 "Baden"
+ STY_authoritarian_monarchism_DEF:0 "The Baden Culture"
+ STY_authoritarian_monarchism_ADJ:0 "Badeni"
  STY_national_socialism:0 "Reichsgau Steiermark"
  STY_national_socialism_DEF:0 "das Reichsgau Steiermark"
  STY_national_socialism_ADJ:0 "Styrian"
@@ -16049,9 +16024,9 @@
  IST_conservative_monarchism:0 "Margraviate of Istria"
  IST_conservative_monarchism_DEF:0 "The Margraviate of Istria"
  IST_conservative_monarchism_ADJ:0 "Illyrian"
- IST_neutrality:0 "Adriatic Littoral"
- IST_neutrality_DEF:0 "The Adriatic Littoral"
- IST_neutrality_ADJ:0 "Istrian"
+ IST_authoritarian_monarchism:0 "Hvar"
+ IST_authoritarian_monarchism_DEF:0 "The Hvar Culture"
+ IST_authoritarian_monarchism_ADJ:0 "Hvar"
  IST_monarchism:0 "Kingdom of Illyria"
  IST_monarchism_DEF:0 "The Kingdom of Illyria"
  IST_monarchism_ADJ:0 "Illyrian"
@@ -17069,8 +17044,8 @@
  CRE_monarchism_DEF:0 "The Kingdom of Crete"
  CRE_stratocratic_monarchism:0 "Protectorate of Crete"
  CRE_stratocratic_monarchism_DEF:0 "The Protectorate of Crete"
- CRE_democratic_monarchism:0 "Eyalet of Crete"
- CRE_democratic_monarchism_DEF:0 "The Eyalet of Crete"
+ CRE_authoritarian_monarchism:0 "Minoa"
+ CRE_authoritarian_monarchism_DEF:0 "The Minoan Civilization"
  CRE_centrist_monarchism:0 "Cretan State"
  CRE_centrist_monarchism_DEF:0 "The Cretan State"
  CRE_ADJ:0 "Cretan"
@@ -19611,8 +19586,8 @@
  THR_neutrality:0 "Thrace"
  THR_neutrality_DEF:0 "The Thrace"
  THR_neutrality_ADJ:0 "Thracian"
- THR_monarchism:0 "Kingdom of Thrace"
- THR_monarchism_DEF:0 "The Kingdom of Thrace"
+ THR_authoritarian_monarchism:0 "Karanovo"
+ THR_authoritarian_monarchism_DEF:0 "The Karanovo Culture"
  THR_centrist_republic:0 "Federation of Thrace"
  THR_centrist_republic_DEF:0 "The Federation of Thrace"
  THR_national_socialism:0 "Reichskommissariat Kleinasien"
@@ -20333,9 +20308,9 @@
  URB_monarchism_DEF:0 "The Duchy of Urbino"
  URB_monarchism_ADJ:0 "Urbinan"
  
- MNU_democratic:0 "Republic of Mantua"
- MNU_democratic_DEF:0 "The Republic of Mantua"
- MNU_democratic_ADJ:0 "Mantuan"
+ MNU_authoritarian_monarchism:0 "Conelle"
+ MNU_authoritarian_monarchism_DEF:0 "The Conelle Culture"
+ MNU_authoritarian_monarchism_ADJ:0 "Conelle"
  MNU_communism:0 "People's Republic of Mantua"
  MNU_communism_DEF:0 "The People's Republic of Mantua"
  MNU_communism_ADJ:0 "Mantuan"
@@ -20349,9 +20324,9 @@
  MNU_monarchism_DEF:0 "The Duchy of Mantua"
  MNU_monarchism_ADJ:0 "Mantuan"
  
- SPL_democratic:0 "Republic of Spoleto"
- SPL_democratic_DEF:0 "The Republic of Spoleto"
- SPL_democratic_ADJ:0 "Spoletan"
+ SPL_authoritarian_monarchism:0 "Ortucchio"
+ SPL_authoritarian_monarchism_DEF:0 "The Ortucchio Culture"
+ SPL_authoritarian_monarchism_ADJ:0 "Ortucchio"
  SPL_communism:0 "People's Republic of Spoleto"
  SPL_communism_DEF:0 "The People's Republic of Spoleto"
  SPL_communism_ADJ:0 "Spoletan"
@@ -22107,8 +22082,8 @@
  KUB_neutrality_DEF:0 "The Kuban People's Republic"
  KUB_stratocratic:0 "Kuban Cossack Host"
  KUB_stratocratic_DEF:0 "The Kuban Cossack Host"
- KUB_monarchism:0 "Kingdom of Kuba"
- KUB_monarchism_DEF:0 "The Kingdom of Kuba"
+ KUB_authoritarian_monarchism:0 "Dolmen"
+ KUB_authoritarian_monarchism_DEF:0 "The Dolmen Culture"
  KUB_fascism:0 "Empire of Kubans"
  KUB_fascism_DEF:0 "The Empire of Kubans"
  KUB_national_socialism:0 "Generalkommissariat Kuban"
@@ -22162,8 +22137,8 @@
  CSS_neutrality:0 "Assembly of Mountain People's of the Caucasus"
  CSS_neutrality_DEF:0 "The Assembly of Mountain People's of the Caucasus"
  CSS_ADJ:0 "Ciscaucasian"
- CSS_monarchism:0 "Kingdom of Ciscaucasia"
- CSS_monarchism_DEF:0 "The Kingdom of Ciscaucasia"
+ CSS_authoritarian_monarchism:0 "Novosvobodnaya"
+ CSS_authoritarian_monarchism_DEF:0 "The Novosvobodnaya Culture"
  CSS_anarchism_ideology:0 "Ciscaucasian Tribes"
  CSS_anarchism_ideology_DEF:0 "The Ciscaucasian Tribes"
  CSS_stratocratic:0 "Ciscaucasian Military District"
@@ -31748,8 +31723,8 @@
  ILY_democratic_monarchism_DEF:0 "The Kingdom of Croatia-Slavonia"
  ILY_democratic:0 "Republic of Illyria"
  ILY_democratic_DEF:0 "The Republic of Illyria"
- ILY_authoritarian_monarchism:0 "Kingdom of Illyria"
- ILY_authoritarian_monarchism_DEF:0 "The Kingdom of Illyria"
+ ILY_authoritarian_monarchism:0 "Vucedol"
+ ILY_authoritarian_monarchism_DEF:0 "The Vucedol Culture"
  ILY_stratocratic_monarchism:0 "General Government of Illyria"
  ILY_stratocratic_monarchism_DEF:0 "The General Government of Illyria"
  ILY_monarchism:0 "Illyrian Kingdom"
